--- a/src/style.css
+++ b/src/style.css
@@ -20,6 +20,10 @@
 }
 .btn-container{
     margin-top: 30px;
+    width: 50%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 .btn {
     display: block;
