--- a/src/style.css
+++ b/src/style.css
@@ -15,12 +15,13 @@
 }
 
 .counter{
+    margin-top: 40px;
     font-size: 110px;
 
 }
 .btn-container{
     margin-top: 30px;
-    width: 50%;
+    width: 30%;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -42,4 +43,17 @@
 .btn:hover {
     background-color: #005a9e;
     border: 1px solid #005a9e;
+}
+
+.btn-start{
+    background-color: #00851d;
+}
+.btn-start:hover{
+    background-color: #004910;
+}
+.btn-stop{
+    background-color: #d4001c;
+}
+.btn-stop:hover{
+    background-color: #8e0013;
 }
